# ijk

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  automaton.dot  build.rs  design.txt  ho  hoge  ijk.sh  lib.rs  mk_behavior_template.sh
behavior/eol_cwa/: keys
behavior/insert/: keys  output
behavior/lastline_dd/: keys
behavior/lastline_dd_undo_redo/: keys
behavior/lastline_yy_p/: input  keys  output
behavior/x_remove_char/: keys
bottleneck/: .gitignore  0.test  1.test  2.test  3.test  4.test  Rakefile
demo/: a.rs  b.rs
src/: automaton.rs  config.rs  controller.rs  diff_buffer.rs  directory.rs  edit_buffer.rs  editor.rs  effect.rs  indent.rs  lib.rs  main.rs  message_box.rs  navigator.rs  normalize.rs  page_list.rs  read_buffer.rs  screen.rs  search.rs  shared.rs  theme.rs  undo_buffer.rs  util.rs  view.rs  visibility_filter.rs
src/config/: builder.rs  default.toml  file_parser.rs  mod.rs
src/edit_buffer/: change_log.rs  clipboard.rs  config.rs  diff_buffer.rs  diff_tree.rs  highlight.rs  indent.rs  invalidate_lines.rs  mod.rs  snippet_parser.rs  undo_buffer.rs
src/edit_buffer/snippet/: file_parser.rs  line_parser.rs  mod.rs  trie.rs
src/read_buffer/: buffer.rs  line.rs  mod.rs  search.rs  visibility_window.rs
