[package]
name = "ijk"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
termion = "*"
clap = "2"
lazy_static = "1.3.0"
syntect = "3.2"
flame = "0.2.2"
combine = "*"
test-generator = "0.2.2"
sequence_trie = "*"

serde = "1"
serde_json = "1"
serde_derive = "1"

[build-dependencies]
build-deps = "^0.1"
